[gd_scene load_steps=2 format=3 uid="uid://bcwbyjwangcom"]

[ext_resource type="Script" path="res://Scripts/IGDB_handler.gd" id="1_qel82"]

[node name="HttpTest" type="Node"]
script = ExtResource("1_qel82")

[node name="auth_request" type="HTTPRequest" parent="."]

[node name="game_request" type="HTTPRequest" parent="."]

[node name="cover_request" type="HTTPRequest" parent="."]

[node name="image_request" type="HTTPRequest" parent="."]
